<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_location_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_info"
        android:textColor="@color/colorNormalText"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/update_time"
        android:textColor="@color/colorNormalText"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_update_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="2000"
            android:hint="@string/hint_update_time" />

        <Button
            android:id="@+id/btn_update_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_update_time"
            android:textAllCaps="false" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_battery_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/battery_info"
        android:textColor="@color/colorNormalText"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tv_battery_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/battery_percent"
        android:textColor="@color/colorNormalText"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tv_gps_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gps_status"
        android:textColor="@color/colorNormalText"
        android:textSize="16dp" />

    <Switch
        android:id="@+id/s_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_switch" />

    <TextView
        android:id="@+id/tv_gps_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Tips: It is difficult to locate GPS indoors."
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tv_error_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorError"
        android:textSize="16dp" />


</LinearLayout>